--- a/dockerfiles/nginx/default.conf
+++ b/dockerfiles/nginx/default.conf
@@ -1,4 +1,4 @@
-upstream localhost{
+upstream linkelli.net{
     server app:8000;
 }
 server {
@@ -14,15 +14,15 @@ server {
         try_files $uri /index.html;
     }
     location /app_static{
-        proxy_pass http://localhost;
+        proxy_pass http://linkelli.net;
     }
     location /api {
-        proxy_pass http://localhost;
+        proxy_pass http://linkelli.net;
         proxy_set_header Host $host;
     }
     
     location /accounts {
-        proxy_pass http://localhost;
+        proxy_pass http://linkelli.net;
     }
 
     #error_page  404              /404.html;
