--- a/dockerfiles/nginx/default.prod.conf
+++ b/dockerfiles/nginx/default.prod.conf
@@ -1,10 +1,10 @@
-upstream linkelli.net{
+upstream django{
     server app:8000;
 }
 server {
-    listen       80;
-    listen  [::]:80;
-    server_name  _;
+    listen       81;
+    listen  [::]:81;
+    server_name  linkelli.net;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
@@ -13,16 +13,18 @@ server {
         index  index.html index.htm;
         try_files $uri /index.html;
     }
-    location /app_static{
-        proxy_pass http://linkelli.net;
+    location  /app_static/{
+        proxy_pass http://django;
+        proxy_set_header Host $host;
     }
     location /api {
-        proxy_pass http://linkelli.net;
+        proxy_pass http://django;
         proxy_set_header Host $host;
     }
     
     location /accounts {
-        proxy_pass http://linkelli.net;
+        proxy_pass http://django;
+        proxy_set_header Host $host;
     }
 
     #error_page  404              /404.html;
@@ -57,4 +59,3 @@ server {
     #    deny  all;
     #}
 }
-
