--- a/dockerfiles/nginx/default.prod.conf
+++ b/dockerfiles/nginx/default.prod.conf
@@ -14,8 +14,7 @@ server {
         try_files $uri /index.html;
     }
     location  /app_static/{
-        proxy_pass http://django;
-        proxy_set_header Host $host;
+        alias /app_static/;
     }
     location /api {
         proxy_pass http://django;
