--- a/dockerfiles/nginx/default.dev.conf
+++ b/dockerfiles/nginx/default.dev.conf
@@ -27,6 +27,10 @@ server {
         proxy_set_header Host $host;
     }
 
+    location /admin {
+        proxy_pass http://django;
+        proxy_set_header Host $host;
+    }
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
