--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ defusedxml==0.7.1
 Django==4.2.3
 django-allauth==0.54.0
 django-cors-headers==4.2.0
+django-environ==0.11.2
 django-extensions==3.2.3
 django-filter==23.2
 djangorestframework==3.14.0
@@ -23,6 +24,7 @@ Markdown==3.4.4
 mccabe==0.7.0
 mysqlclient==2.2.0
 oauthlib==3.2.2
+packaging==23.1
 Pillow==10.0.0
 pycodestyle==2.10.0
 pycparser==2.21
