fix:social_accountだけでなく通常ログインも可能な仕様に修正

--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,6 @@
 google_client_id="986388952862-pd9tvknj96mgsilndv962s7g7d1mkpkr.apps.googleusercontent.com"
 google_secret="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"
-github_client_id="c4ac5406b63682a2e4f4"
-github_secret= "07ba56e80b61fd2d4614e4e5847dc7b9c2cb1e13"
+github_dev_client_id="c4ac5406b63682a2e4f4"
+github_dev_secret="07ba56e80b61fd2d4614e4e5847dc7b9c2cb1e13"
+github_prod_client_id="b3d1a8249b88cb8f24ff"
+github_prod_secret="eda3dec276581c069b480dc7d3be1e6c3c161159"
