--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,11 +5,17 @@ services:
     build:
       context: .
       dockerfile: ./dockerfiles/mysql/Dockerfile
-    container_name: mysql_test
+    container_name: mysql
     ports:
       - "3306:3306"
     environment:
-      TZ: "Asia/Tokyo"
+      MYSQL_ROOT_PASSWORD_FILE: /run/secrets/db_root_password
+      MYSQL_USER: linkelli
+      MYSQL_PASSWORD_FILE: /run/secrets/db_password
+      MYSQL_DATABASE: linkelli
+    secrets:
+      - db_root_password
+      - db_password
     healthcheck:
       test:
         [
@@ -26,7 +32,7 @@ services:
       retries: 3
       start_period: 1s
     volumes:
-      - ./my.cnf:/etc/mysql/conf.d/my.cnf
+      - ./dockerfiles/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
     networks:
       - network
 
@@ -34,9 +40,9 @@ services:
     build:
       context: .
       dockerfile: ./dockerfiles/django/Dockerfile
-    container_name: django_test
+    container_name: django
     working_dir: /backend
-    command: sh -c "source ./.venv/bin/activate && python ./manage.py migrate && python ./manage.py collectstatic && python -m gunicorn -b 0.0.0.0:8000 mysite.wsgi:application"
+    command: sh -c "source ./.venv/bin/activate && python ./manage.py migrate&&python ./manage.py collectstatic&&python -m gunicorn -b 0.0.0.0:8000 linkelli.wsgi:application
     tty: true
     environment:
       - DJANGO_DEVELOPMENT=false
@@ -97,3 +103,10 @@ volumes:
 
 networks:
   network:
+
+
+secrets:
+  db_password:
+    file: ./db_password.txt
+  db_root_password:
+    file: ./db_root_password.txt
