--- a/dockerfiles/mysql/Dockerfile
+++ b/dockerfiles/mysql/Dockerfile
@@ -1,6 +1,3 @@
 FROM mysql:8.1.0
-ENV MYSQL_ROOT_PASSWORD root
-ENV MYSQL_DATABASE linkelli
-ENV MYSQL_USER linkelli
-ENV MYSQL_PASSWORD linkelli
+ENV TZ "Azia/Tokyo"
 EXPOSE 3306
