--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,10 +42,10 @@ services:
       dockerfile: ./dockerfiles/django/Dockerfile
     container_name: django
     working_dir: /backend
-    command: sh -c "source ./.venv/bin/activate && python ./manage.py migrate&&python ./manage.py collectstatic&&python -m gunicorn -b 0.0.0.0:8000 linkelli.wsgi:application
+    command: sh -c "source ./.venv/bin/activate && python ./manage.py migrate&&python ./manage.py collectstatic --noinput&&python ./manage.py runserver 0.0.0.0:8000" #python -m gunicorn -b 0.0.0.0:8000 linkelli.wsgi:application"
     tty: true
     environment:
-      - DJANGO_DEVELOPMENT=false
+      DJANGO_MODE: "production"
     ports:
       - "8000:8000"
     depends_on:
@@ -55,7 +55,7 @@ services:
     volumes:
       - type: volume
         source: django_static_data
-        target: /backend/mysite/app_static
+        target: /backend/linkelli/app_static
 
     networks:
       - network
