--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -39,7 +39,7 @@ services:
       dockerfile: ./dockerfiles/django/Dockerfile.dev
     container_name: django
     working_dir: /backend
-    command: sh -c "source ./.venv/bin/activate && python ./manage.py migrate&&python ./manage.py collectstatic&&sh "
+    command: sh -c "source ./.venv/bin/activate && python ./manage.py migrate&&python ./manage.py collectstatic --noinput&&sh "
     tty: true
     environment:
       - DJANGO_MODE=development
