--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       dockerfile: ./dockerfiles/django/Dockerfile
     container_name: django
     working_dir: /backend
-    command: sh -c "source ./.venv/bin/activate && python ./manage.py migrate&&python ./manage.py collectstatic --noinput&&python -m gunicorn -b 0.0.0.0:8000 linkelli.wsgi:application"
+    command: sh -c "source ./.venv/bin/activate && python ./manage.py makemigrations api && python ./manage.py migrate&&python ./manage.py collectstatic --noinput&&python -m gunicorn -b 0.0.0.0:8000 linkelli.wsgi:application"
     tty: true
     environment:
       DJANGO_MODE: "production"
